@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - new 'delimiter' option, which allows the use of leading whitespace in
+          '-raw' strings
 
 0.006     2014-09-06 08:44:46Z
           - no longer dropping the last character off Makefile.PL (significant
